# note

./: .gitignore  ACID.md  BASE.md  CAP.md  CMakeLists.txt  CMakePresets.json  DatabaseConcurrency.md  Gossip.md  InterestingBlogs.org  Mimalloc.typ  Mysql4.md  Mysql6.md  README.md  Unix高级编程.md  book.toml  cpp_basic.md  gen_toc.sh  inotify.typ  协程.md  深度探索C++对象模型（总结篇）.md
.github/workflows/: deploy.yml
.obsidian/: graph.json  workspace.json
Compiler/: QBE.org
ECMAScript/: QuickJS.org  Spec.org
HelloTriangle/: D3D12HelloTriangle.cpp
Job/: Java.md  PotentialQuestion.md  README.org  RN.md
Lyrics/: Mother I Sober.txt  Rigamortis.md  Sad Wit Da Street.txt  Sing About Me, I'm Dying Of Thirst.txt  Spark My Soul.md
Mysql/: DatabaseConcurrency.md  DatabaseQueryOptimization.md  Mysql.md  Mysql2.md  Mysql3.md  Mysql5.md  Mysql6.md  重构数据库.md
Pg/: Postgresql学习.md  Postgresql学习2.md
Rust/: Rust Trait使用与实现.md  Rustacean指南.md  Rust常见trait.md  Rust所有权.md  Rust所有权与智能指针.md  Rust生命周期.md
app/: build.gradle.kts
app/src/main/cpp/: CMakeLists.txt  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  TextureAsset.cpp  TextureAsset.h  Utility.cpp  Utility.h  VulkanUtil.cpp  VulkanUtil.h
app/src/main/cpp/shaders/: gen_spirv_header.cmake  shader.frag  shader.vert
book/: 404.html  index.html  print.html  toc.html  toc.js
book/ArceOS/: index.html  系统调用.html
book/Docker/: index.html  容器网络.html  镜像.html
book/Go/: index.html
book/LSM-Tree/: LSMTree.html  LSMTree2.html  LSMTree3.html  LSMTree4.html  index.html
book/Linux/: NAPI.html  index.html
book/Redis/: Intset.html  LDKV-一个尝试实现KV的尝试.html  index.html  listpack.html  redisOverview.html  sds.html
book/Rust/: FPRust.html  Hashbrown.html  RustTrait使用与实现.html  Rustacean指南.html  Rust常见trait.html  Rust异步编程.html  Rust所有权.html  Rust所有权与智能指针.html  Rust生命周期.html  Rust的线程安全.html  Tokio.html  index.html
book/RxJava/: Java一些知识.html  Scheduler.html  Spring相关.html  ThreadPool.html  index.html  介绍.html  踩坑.html
book/TheArtOfComputerProgramming/: index.html  基本算法.html
book/cpp/: Folly.html  SSO.html  cpp_basic.html  index.html  标准库算法.html  深度探索C++对象模型（总结篇）.html
book/rCore/: index.html  多道程序与分时多任务.html  批处理系统.html  第三章作业.html  第五章作业.html  第六章作业.html  第四章作业.html
book/xv6/: index.html  xv6学习1.html  xv6学习2.html  xv6学习3.html  xv6学习4.html  xv6学习5.html  xv6学习6.html  xv6学习7.html  xv6学习8.html  xv6学习9.html
book/分布式协议/: Raft.html  Raft2.html  Raft3.html  index.html
book/前端/: Flutter.html  JSFramework.html  Router.html  SolidJS.html  index.html  移动开发技术.html
book/数据库/: TimeSeriesDB.html  index.html  乐观锁.html  悲观锁.html
book/数据结构与算法/: AC自动机.html  BTree.html  BloomFilter.html  Clock-Cache.html  LFUCache.html  LRUCache.html  Shuffle.html  SkipList.html  bfs.html  dfs.html  dp.html  index.html  tricky.html  二分.html  二叉树.html  位运算技巧.html  单调栈.html  单调队列.html  双指针.html  哈希表.html  回溯法.html  图算法.html  堆.html  字符串算法.html  并查集.html  排序.html  数学.html  栈.html  滑动窗口.html  红黑树.html  线段树.html  贪心.html  链表.html  队列.html  随机数算法.html
book/计网/: DPDK.html  RDMA.html  RFC5040.html  RFC5041-DDP.html  index.html
book/零零碎碎/: BTreeVSBPlusTree.html  Datawhale AI冬令营参与体验.html  Github Action.html  index.html
cmake/: VerifyArtifacts.cmake
content/: android_llamacpp_with_vulkan.md  codex_and_harness_engineering.md  cpp_usage.md  dive_into_linux.md  dive_into_linux3.md  dive_into_linux_2.md  dive_into_llamacpp.md  dive_into_lua.md  dive_into_lua_2.md  dive_into_lua_3.md  dive_into_lua_4.md  dive_into_lua_5.md  dive_into_wine.md  docker_on_android.md  getting_started_with_gleam.md  getting_started_with_wasm3.md  gguf-parsing-and-gpu-execution.md  glm_library.md  interesting_blogs_and_websites.md  linear_algebra_done_right_reading_experience.md  mali_g610_kernel_driver.md  messing_with_genbook.md  messing_with_genbook_2.md  oh_my_pi_read.md  qualcomm_npu_getting_started.md  sketchpad.md  some_android_knowledge.md  where_is_c_stdlib.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
include/: App.hpp
proxy/: link
scripts/: build-book
shaders/: triangle.metal
src/: App.mm  Hello.md  SUMMARY.md  main.cpp
src/ASM/: .basic.md.swp  C.md  README.md  basic.md
src/ASM/source/: CMakeLists.txt  Makefile  add_example.s  add_example2.s  alias.s  fileio.s  hello.s  macro_toupper.s  main.s  main_file.s  main_macro.s  mov_example.s  toupper.s  upper.s  upper.txt
src/ArceOS/: README.md  系统调用.md
src/Docker/: README.md  容器网络.md  镜像.md
src/Functional/: Polymorphism.md  README.md
src/Go/: README.md  basic.md  csp.md
src/Java/: ClassLoader.md  ElasticSearch.md  Jamvm.md  Java一些知识.md  Kafka.md  Spring相关.md  ThreadPool.md  介绍.md  并发.md  消息队列.md  类加载.md  线程.md  设计模式.md  负载均衡.md  踩坑.md  限流算法.md
src/LSM-Tree/: LSMTree.md  LSMTree2.md  LSMTree3.md  LSMTree4.md  LSMTree5.md  README.md  RocksDB.md
src/Linux/: FileSystem.md  K8S.md  NAPI.md  ProgrammingInterface.md  README.md  UnixDomainSocket.md  binfmt.md  eBPF.md  epoll.md  glibc.md  io_uring.md  kqueue.md  systemd.md  systemtap.md  zRAM.md  内存管理.md  进程间通信.md
src/Redis/: Intset.md  LDKV-一个尝试实现KV的尝试.md  README.md  RaxTree.md  listpack.md  redisOverview.md  sds.md
src/RiscvCPU/: Chisel.md  README.md  使用文档.md  (+2 more)
src/cpp/ffi/: CMakeLists.txt  meson.build  test.c  test_pass_struct.cc  test_struct.c
src/cpp/ffi/libs/: test_hello.cc  test_pass_struct.cc  test_struct.cc
分布式/: BASE.md  Gossip.md  Paxos2.md  QuorumNWR.md  Raft.md  Raft复习.md  ZAB.md  redis.md
图形学/: OpenGL.org  Skia.org
复习资料/: Deadlock.org  Memory.org  NetWork.org  NetWork.tex  OperatingSystem.org  replace.py
操作系统/: Unix高级编程.md  ucontext原理.md  操作系统.typ  操作系统2.md  操作系统3.md  操作系统4.md  操作系统5.md  文件系统.md
数据结构与算法/: BTree.md  Clock-Cache.md  SkipList.md  dp.md  ucontext原理.md  二分.md  二叉树.md  位运算技巧.md  双指针.md  回溯法.md  红黑树.md  贪心.md  链表.md
日记/: 2025_11_11.org  2025_11_12.org  2025_11_14.org  2025_11_20.org  2025_11_23.org  2025_11_25.org  2025_11_27.org  2025_7_22.org  2025_8_01.org  2025_8_08.org  2025_8_14.org  2025_8_22.org  Debug.org  Set.org
计算机网络/: SSE.md  计网八股.md  计网八股2.md  计网八股3.md  计网八股4.md  计网八股5.md  计网八股6.md  路由算法.md
(+224 files in other folders)
